2006-04-28  Johan Bilien  <johan.bilien@nokia.com>

	* hildon-widgets/hildon-window.c:
	  - forgot to reinitialize convenience pointers to borders after they
	    are reinitialised
	  - replaced a g_return_if_fail with a g_return_val_if_fail now
	    that toggle_menu returns a g_boolean

2006-04-28  Johan Bilien  <johan.bilien@nokia.com>

	N#28176
	* hildon-widgets/hildon-window.c: Free the borders structure
	  when the window is destroyed.

2006-04-27 Tapani Palli <tapani.palli@nokia.com>

	* hildon-widgets/hildon-caption.c : check if ancestor
	(still) exists in set-focus handler, fixes N#25501

2006-04-27  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-time-editor.c
	(hildon_time_editor_check_locale): do not force lower case for
	AM/PM symbols. Use the string as it is given by the locale. Makes
	it coherent with hildon time picker. Fixes N#27963


2006-04-26  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-set-password-dialog.c
	(c_): new macro, calls dgettext on "hildon-common-strings" domain.
	(hildon_set_password_response_set): use c_ for common strings
	(hildon_set_password_response_change): likewise.
	Fixes N#27749

	* hildon-widgets/hildon-set-password-dialog.h: indent cleanup


2006-04-26  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-file-handling-note.c (gettext macro): use
	"hildon-fm" as textual domain. Fixes N#27702

2006-04-26  Luc Pionchon  <luc.pionchon@nokia.com>

	* configure.ac: 0.12.12

	* Makefile.am (clean-all): brutal target to cleanup the
	folder. Will do this properly later.

2006-04-25  Luc Pionchon  <luc.pionchon@nokia.com>

	* doc/Makefile.am: use "-include" for gtk-doc.make (ignore
	included Makefile if missing).

	* configure.ac: temporarily disable GTK_DOC_CHECK (problem in
	integration environement)

	* configure.ac: print configuration summary after processing

2006-04-24  Marius Vollmer  <marius.vollmer@nokia.com>

        From Murray Cumming  <murrayc@murrayc.com>, M#183.
