@@ -1,3 +1,13 @@
+2006-04-29  Johan Bilien  <johan.bilien@nokia.com>
+
+	* hildon-widgets/hildon-window.c:
+	  - removed connection to self, replaced with overridding virtual
+	    methods
+	  - removed gtk_widget_set_event in init, legacy from HildonApp
+	  - use gtk_widget_get_child_requisition() instead of
+	    gtk_widget_size_request() in _allocation
+	  - don't allocate space for the child if it is not visible
+
 2006-04-28  Johan Bilien  <johan.bilien@nokia.com>
 
 	* hildon-widgets/hildon-window.c:
